--- a/mystyles.css
+++ b/mystyles.css
@@ -12,3 +12,14 @@
     transform: rotate(1440deg);
   }
 }
+
+#first {
+  position: absolute;
+  top: 20%;
+  left: 20%;
+}
+#second {
+  position: absolute;
+  top: 30%;
+  left: 40%;
+}
